@@ -36,7 +36,7 @@ std::ostream& ID::print(std::ostream& o) const
   const unsigned SUBKIND_MAX = 9;
   const char* subkinds[MAINKIND_MAX][SUBKIND_MAX] = {
     { " ordinary_ground", " ordinary_nonground", " builtin",         " aggregate", "", "", " external", "", " module" },
-    { " constant",        " integer",            " variable",        " builtin",   "", "", ""          },
+    { " constant",        " integer",            " variable",        " builtin",   "predicate", "", ""          },
     { " ordinary_ground", " ordinary_nonground", " builtin",         " aggregate", "", "", " external", "", " module" },
     { " regular",         " constraint",         " weak_constraint", "",           "", "", ""          }
   };
