@@ -63,7 +63,9 @@ std::ostream& Registry::print(std::ostream& o) const
     o <<
       "REGISTRY BEGIN" << std::endl <<
       "terms:" << std::endl <<
-      terms <<
+      termz <<
+      "preds:" << std::endl <<
+      preds <<
       "ogatoms:" << std::endl <<
       ogatoms <<
       "onatoms:" << std::endl <<
@@ -187,7 +189,10 @@ void RawPrinter::print(ID id)
 		{
 		case ID::SUBKIND_TERM_CONSTANT:
 		case ID::SUBKIND_TERM_VARIABLE:
-			out << registry->terms.getByID(id).symbol;
+			out << registry->termz.getByID(id).symbol;
+			break;
+		case ID::SUBKIND_TERM_PREDICATE:
+			out << registry->preds.getByID(id).symbol;
 			break;
 		case ID::SUBKIND_TERM_INTEGER:
 			out << id.address;
